Same err with USmetadata

--- a/default/src/USMetadata/ckanext/usmetadata/templates/package/snippets/expanded_common_core_fields.html
+++ b/default/src/USMetadata/ckanext/usmetadata/templates/package/snippets/expanded_common_core_fields.html
@@ -9,7 +9,7 @@
 
 {{ form.input('category', label=_('Theme (Category)'), id='field-category', placeholder=_('vegetables, non_starchy, green'), value=data.common_core.category, error=errors.category, classes=['control-medium'], attrs={'title': 'Main thematic category of the dataset. '} )}}
 
-{{ form.input('data_dictionary', label=_('Described By (Data Dictionary)'), id='field-data_dictionary', placeholder=_('http://www.my.gov/datadictionary'), value=data.common_core.data_dictionary, error=errors.data_dictionary, classes=['control-medium'], attrs={'title': 'URL to the data dictionary for the dataset or API. Note that documentation other than a Data Dictionary can be referenced using Related Documents as shown in the expanded fields.'}) }}
+{{ form.input('data_dictionary', label=_('Described By (Data Dictionary)'), id='field-data_dictionary', placeholder=_('http://www.my.gov/datadictionary'), value=data.common_core.data_dictionary, error=errors.data_dictionary, classes=['control-full'], attrs={'title': 'URL to the data dictionary for the dataset or API. Note that documentation other than a Data Dictionary can be referenced using Related Documents as shown in the expanded fields.'}) }}
 
 {% set format_attrs = {'data-module': 'autocomplete', 'data-module-source': '/api/2/util/resource/media_autocomplete?incomplete=?'} %}
 
@@ -17,11 +17,11 @@
     value=data.common_core.data_dictionary_type, error=errors.data_dictionary_type, classes=['control-medium'], attrs=format_attrs) %}
 {% endcall %}
 
-<div class="control-group">
+<div class="control-group control-medium">
   <label class="control-label" for="field-accrual_periodicity">
       {{ _("Accrual Periodicity (Frequency)") }}</label>
   <div class="controls" title="Frequency with which dataset is published.">
-    <select id="field-accrual_periodicity" name="accrual_periodicity" data-module="autocomplete" title="Frequency with which dataset is published.">
+    <select id="field-accrual_periodicity" name="accrual_periodicity" title="Frequency with which dataset is published.">
       <option value=""></option>
         {% for level in h.accrual_periodicity %}
       <option value="{{ level }}" {% if level == data.common_core.accrual_periodicity %}selected{% endif %} >
@@ -32,21 +32,19 @@
   </div>
 </div>
 
-{{ form.input('conforms_to', label=_('Conforms To (Data Standard)'), id='field-conforms_to', placeholder=_('http://www.agency.gov/widget-data-standard/'), value=data.common_core.conforms_to, error=errors.conforms_to, classes=['control-medium'], is_required=false) }}
+{{ form.input('conforms_to', label=_('Conforms To (Data Standard)'), id='field-conforms_to', placeholder=_('http://www.agency.gov/widget-data-standard/'), value=data.common_core.conforms_to, error=errors.conforms_to, classes=['control-full'], is_required=false) }}
 
-{{ form.input('homepage_url', label=_('Landing Page (Homepage URL)'), id='field-homepage_url', placeholder=_('http://www.agency.gov/vegetables'), value=data.common_core.homepage_url, error=errors.homepage_url, classes=['control-medium'], attrs={'title': 'Alternative landing page used to redirect user to a contextual, Agency-hosted homepage for the Dataset or API when selecting this resource from the Data.gov user interface.his field is not intended for an agency homepage (e.g. www.agency.gov), but rather if a dataset has a human-friendly hub or landing page that users should be directed to for all resources tied to the dataset. This allows agencies to better specify what a visitor receives after selecting one of the agency datasets on Data.gov or in third-party mashups.'} )}}
+{{ form.input('homepage_url', label=_('Landing Page (Homepage URL)'), id='field-homepage_url', placeholder=_('http://www.agency.gov/vegetables'), value=data.common_core.homepage_url, error=errors.homepage_url, classes=['control-full'], attrs={'title': 'Alternative landing page used to redirect user to a contextual, Agency-hosted homepage for the Dataset or API when selecting this resource from the Data.gov user interface.his field is not intended for an agency homepage (e.g. www.agency.gov), but rather if a dataset has a human-friendly hub or landing page that users should be directed to for all resources tied to the dataset. This allows agencies to better specify what a visitor receives after selecting one of the agency datasets on Data.gov or in third-party mashups.'} )}}
 
 {{ form.input('language', label=_('Language'), id='field-language', placeholder=_('us-EN'), value=data.common_core.language, error=errors.language, classes=['control-medium'], attrs={'title': 'The language of the dataset.'} )}}
 
 {{ form.input('primary_it_investment_uii', label=_('Primary IT Investment UII'), id='field-primary-it-investment-uii', placeholder=_('021-352204052'), value=data.common_core.primary_it_investment_uii, error=errors.primary_it_investment_uii, classes=['control-medium'], attrs={'title': 'For linking a dataset with an IT Unique Investment Identifier (UII)'} )}}
 
-{{ form.input('related_documents', label=_('References (Related Documents)'), id='field-related_documents', placeholder=_('http://www.agency.gov/fruits/fruits.csv, http://www.agency.gov/legumes/legumes.csv'), value=data.common_core.related_documents, error=errors.related, classes=['control-medium'], attrs={'title': 'Related documents such as technical information about a dataset, developer documentation, etc. References not in the data dictionary go here. Separate multiple URLs with commas.'} )}}
+{{ form.input('related_documents', label=_('References (Related Documents)'), id='field-related_documents', placeholder=_('http://www.agency.gov/fruits/fruits.csv, http://www.agency.gov/legumes/legumes.csv'), value=data.common_core.related_documents, error=errors.related, classes=['control-full'], attrs={'title': 'Related documents such as technical information about a dataset, developer documentation, etc. References not in the data dictionary go here. Separate multiple URLs with commas.'} )}}
 
 {{ form.input('release_date', label=_('Issued (Release Date)'), id='field-release_date', placeholder=_('2012-01-15'), value=data.common_core.release_date, error=errors.release_date, classes=['control-medium'], attrs={'title': 'Date of formal issuance.Dates should be formatted as YYYY-MM-DD. Specify "01" as the day if unknown. If the file is brand-new, enter the issued date here.'} )}}
 
-{{ form.input('system_of_records', label=_('System of Records'), id='field-system_of_records', placeholder=_('http://www.my.gov/systemofrecords'), value=data.common_core.system_of_records, error=errors.system_of_records, classes=['control-medium'], attrs={'title': 'If the systems is designated as a system of records under the Privacy Act of 1974, provide the URL to the System of Records Notice related to this dataset.'} )}}
-
-{#{{ form.input('webservice', label=_('Webservice'), id='field-webservice', placeholder=_('http://www.agency.gov/api/endpoint.json'), value=data.common_core.webservice, error=errors.webservice, classes=['control-medium'], attrs={'title': 'Endpoint of web service to access dataset.'} )}}#}
+{{ form.input('system_of_records', label=_('System of Records'), id='field-system_of_records', placeholder=_('http://www.my.gov/systemofrecords'), value=data.common_core.system_of_records, error=errors.system_of_records, classes=['control-full'], attrs={'title': 'If the systems is designated as a system of records under the Privacy Act of 1974, provide the URL to the System of Records Notice related to this dataset.'} )}}
 
 <div class="control-group">
     <label class="control-label" for="field-is_parent">
@@ -55,7 +53,6 @@
     <div class="controls" title="This dataset will be used to link other datasets in a collection">
         <select id="field-is_parent"
                 name="is_parent"
-                data-module="autocomplete"
                 title="This dataset will be used to link other datasets in a collection">
 
             {% for id, desc in h.is_parent_options.items() %}
@@ -67,7 +64,7 @@
     </div>
 </div>
 
-<div class="control-group control-group-dataset-parent">
+<div class="control-group control-group-dataset-parent control-full">
   <label class="control-label" for="field-parent_dataset">
       {{ _("Parent dataset (for isPartOf)") }}</label>
   <div class="controls" title="Parent Dataset.">
