--- a/default/src/USMetadata/ckanext/usmetadata/templates/package/read.html
+++ b/default/src/USMetadata/ckanext/usmetadata/templates/package/read.html
@@ -1,5 +1,46 @@
 {% ckan_extends %}
 
+{# override core template to hide private icon on dataset page. #}
+{% block package_description %}
+    {% for extra in pkg.extras  %}
+        {% if extra['key'] == 'public_access_level' and extra['value'] == 'public' %}
+            <span class="dataset-private label label-inverse pull-right">
+                <i class="icon-unlock"></i>
+                {{ _('Public') }}
+            </span>
+        {% endif %}
+        {% if extra['key'] == 'public_access_level' and extra['value'] == 'non-public' %}
+            <span class="dataset-private label label-inverse pull-right">
+                <i class="icon-lock"></i>
+                {{ _('Non-public') }}
+            </span>
+        {% endif %}
+        {% if extra['key'] == 'public_access_level' and extra['value'] == 'restricted public' %}
+            <span class="dataset-private label label-inverse pull-right">
+                <i class="icon-lock"></i>
+                {{ _('restricted public') }}
+            </span>
+        {% endif %}
+    {% endfor %}
+    <h1>
+      {% block page_heading %}
+        {{ pkg.title or pkg.name }}
+        {% if pkg.state.startswith('draft') %}
+          [{{ _('Draft') }}]
+        {% endif %}
+      {% endblock %}
+    </h1>
+    {% block package_notes %}
+      {% if c.pkg_notes_formatted %}
+        <div class="notes embedded-content">
+          {{ c.pkg_notes_formatted }}
+        </div>
+      {% endif %}
+    {% endblock %}
+    {# FIXME why is this here? seems wrong #}
+    <span class="insert-comment-thread"></span>
+{% endblock %}
+
 {% block package_additional_info %}
 
     {% set pkg = h.load_data_into_dict(pkg) %}
