--- a/default/src/USMetadata/ckanext/usmetadata/templates/package/snippets/required_common_core_fields.html
+++ b/default/src/USMetadata/ckanext/usmetadata/templates/package/snippets/required_common_core_fields.html
@@ -6,7 +6,7 @@
 {% set errors = errors or {} %}
 
 {% block package_required_metadata %}
-    {{ form.input('modified', id='field-modified', label=_('Modified (Last Update)'), placeholder=_('2014-01-15'), value=data.common_core.modified, error=errors.modified, classes=['control-full', 'control-medium'], attrs={'title': 'Most recent date on which the dataset was changed, updated or modified. Dates should be formatted as YYYY-MM-DD. Specify "01" as the day if unknown.'}, is_required=true) }}
+    {{ form.input('modified', id='field-modified', label=_('Modified (Last Update)'), placeholder=_('2014-01-15'), value=data.common_core.modified, error=errors.modified, classes=['control-medium'], attrs={'title': 'Most recent date on which the dataset was changed, updated or modified. Dates should be formatted as YYYY-MM-DD. Specify "01" as the day if unknown.'}, is_required=true) }}
 {#    {{ form.input('publisher', id='field-publisher', label=_('Publishing Agency'), placeholder=_('Federal Bureau of Investigation'), value=data.common_core.publisher, error=errors.publisher, classes=['control-full', 'control-medium'], attrs={'title': 'The publishing agency.'}, is_required=true) }}#}
 
     <div class="control-group control-full control-medium {{ "error" if error }}">
@@ -29,12 +29,12 @@
 
     {{ form.input('unique_id', id='field-unique_id', label=_('Identifier (Unique ID)'), placeholder=_('doj-a327-73809'), value=data.common_core.unique_id, error=errors.unique_id, classes=['control-full', 'control-medium'], attrs={'title': 'A unique identifier for the dataset or API as maintained within an Agency catalog or database. It is essential that this ID be unique within the Department or Agency and that it remains consistent.'}, is_required=true) }}
 
-    <div class="control-group">
+    <div class="control-group control-medium">
       <label class="control-label" for="field-public_access_level">
           <span title="This field is required" class="control-required">*</span>
           {{ _("Public Access Level") }}</label>
       <div class="controls" title="The degree to which this dataset could be made publicly-available, regardless of whether it has been made available. Choices: public (Data asset is or could be made publicly available to all without restrictions), restricted public (Data asset is available under certain use restrictions), or non-public (Data asset is not available to members of the public).">
-        <select id="field-public_access_level" name="public_access_level" data-module="autocomplete" title="The degree to which this dataset could be made publicly-available, regardless of whether it has been made available. Choices: public (Data asset is or could be made publicly available to all without restrictions), restricted public (Data asset is available under certain use restrictions), or non-public (Data asset is not available to members of the public).">
+        <select id="field-public_access_level" name="public_access_level" title="The degree to which this dataset could be made publicly-available, regardless of whether it has been made available. Choices: public (Data asset is or could be made publicly available to all without restrictions), restricted public (Data asset is available under certain use restrictions), or non-public (Data asset is not available to members of the public).">
             {% for level in h.public_access_levels %}
           <option value="{{ level }}" {% if level == data.common_core.public_access_level %}selected{% endif %} >
             {{ level }}
