--- a/default/src/ckanext-usmetadata_demo/ckanext/usmetadata_demo/templates/package/snippets/additional_info.html
+++ b/default/src/ckanext-usmetadata_demo/ckanext/usmetadata_demo/templates/package/snippets/additional_info.html
@@ -1,23 +1,35 @@
 {% ckan_extends %}
 
 {% block extras %}
-  {% if pkg_dict.custom_text %}
+  {% if pkg_dict.modified %}
     <tr>
-      <th scope="row" class="dataset-label">{{ _("Custom Text") }}</th>
-      <td class="dataset-details">{{ pkg_dict.custom_text }}</td>
+      <th scope="row" class="dataset-label">{{ _("Modified (Last Updated)") }}</th>
+      <td class="dataset-details">{{ pkg_dict.modified }}</td>
+    </tr>
+    <tr>
+      <th scope="row" class="dataset-label">{{ _("Publisher (Agency)") }}</th>
+      <td class="dataset-details">{{ pkg_dict.publisher }}</td>
+    </tr>
+    <tr>
+      <th scope="row" class="dataset-label">{{ _("Identifier (Any UniqueID)") }}</th>
+      <td class="dataset-details">{{ pkg_dict.identifier }}</td>
+    </tr>
+    <tr>
+      <th scope="row" class="dataset-label">{{ _("Bureau Code") }}</th>
+      <td class="dataset-details">{{ pkg_dict.bureau_code }}</td>
+    </tr>
+    <tr>
+      <th scope="row" class="dataset-label">{{ _("Program Code") }}</th>
+      <td class="dataset-details">{{ pkg_dict.prog_code }}</td>
+    </tr>
+    <tr>
+      <th scope="row" class="dataset-label">{{ _("Contact Name") }}</th>
+      <td class="dataset-details">{{ pkg_dict.contact_name }}</td>
+    </tr>
+    <tr>
+      <th scope="row" class="dataset-label">{{ _("Contact Email") }}</th>
+      <td class="dataset-details">{{ pkg_dict.contact_email }}</td>
     </tr>
     
-    <tr>
-    <td class="dataset-details"> Other Custom Text </td>
-    </tr>
-    
-    <tr>
-      <th scope="row" class="dataset-label">{{ _("Custom Text One") }}</th>
-      <td class="dataset-details">{{ pkg_dict.custom_text_1 }}</td>
-    </tr>
-    <tr>
-      <th scope="row" class="dataset-label">{{ _("Custom Text Two") }}</th>
-      <td class="dataset-details">{{ pkg_dict.custom_text_1 }}</td>
-    </tr>
   {% endif %}
 {% endblock %}
