--- a/default/src/ckanext-usmetadata_demo/ckanext/usmetadata_demo/templates/package/snippets/package_metadata_fields.html
+++ b/default/src/ckanext-usmetadata_demo/ckanext/usmetadata_demo/templates/package/snippets/package_metadata_fields.html
@@ -8,7 +8,7 @@
 {% block package_metadata_fields %}
 
   <div class="control-group">
-    <label class="control-label" for="field-access_level">{{ _("Access Level") }}</label>
+    <label class="control-label" for="field-access_level">{{ _("Access Level *") }}</label>
     <div class="controls">
       <select id="field-access_level" name="access_level" data-module="autocomplete">
         {% for access_level in h.access_levels()  %}
