Added Usmetadata fields on first page

--- a/default/src/USMetadata/ckanext/usmetadata/templates/package/read_base.html
+++ b/default/src/USMetadata/ckanext/usmetadata/templates/package/read_base.html
@@ -1,4 +1,11 @@
 {% ckan_extends %}
 
+{% block content_action %}
+  {% if h.check_access('package_update', {'id':pkg.id }) %}
+    {% link_for _('Manage'), controller='package', action='edit', id=pkg.name, class_='btn', icon='wrench' %}
+    {% link_for _('Clone'), controller='ckanext.usmetadata.plugin:CloneController', action='clone_dataset_metadata', id=pkg.name, class_='btn', icon='wrench' %}
+  {% endif %}
+{% endblock %}
+
 {% block package_social %}
 {% endblock %}
