--- a/default/src/USMetadata/ckanext/usmetadata/templates/package/snippets/expanded_common_core_fields.html
+++ b/default/src/USMetadata/ckanext/usmetadata/templates/package/snippets/expanded_common_core_fields.html
@@ -44,13 +44,7 @@
 
 {{ form.input('release_date', label=_('Issued (Release Date)'), id='field-release_date', placeholder=_('2012-01-15'), value=data.common_core.release_date, error=errors.release_date, classes=['control-medium'], attrs={'title': 'Date of formal issuance.Dates should be formatted as YYYY-MM-DD. Specify "01" as the day if unknown. If the file is brand-new, enter the issued date here.'} )}}
 
-<<<<<<< HEAD
-{{ form.input('system_of_records', label=_('System of Records'), id='field-system_of_records', placeholder=_('http://www.my.gov/systemofrecords'), value=data.common_core.system_of_records, error=errors.system_of_records, classes=['control-medium'], attrs={'title': 'If the systems is designated as a system of records under the Privacy Act of 1974, provide the URL to the System of Records Notice related to this dataset.'} )}}
-
-{{ form.input('webservice', label=_('Webservice'), id='field-webservice', placeholder=_('http://www.agency.gov/api/endpoint.json'), value=data.common_core.webservice, error=errors.webservice, classes=['control-medium'], attrs={'title': 'Endpoint of web service to access dataset.'} )}}
-=======
 {{ form.input('system_of_records', label=_('System of Records'), id='field-system_of_records', placeholder=_('http://www.my.gov/systemofrecords'), value=data.common_core.system_of_records, error=errors.system_of_records, classes=['control-full'], attrs={'title': 'If the systems is designated as a system of records under the Privacy Act of 1974, provide the URL to the System of Records Notice related to this dataset.'} )}}
->>>>>>> addingUsmetadata
 
 <div class="control-group">
     <label class="control-label" for="field-is_parent">
@@ -83,6 +77,22 @@
       </option>
         {% endfor %}
     </select>
+  </div>
+</div>
+
+<div class="control-group control-medium">
+  <label class="control-label" for="field-publishing_status">
+      {{ _("Publishing Status") }}</label>
+  <div class="controls" title="Draft datasets will not be included in EDL and PDL json">
+    <select id="field-publishing_status" name="publishing_status" title="Publishing Status (Draft datasets will not be included in EDL and PDL)">
+
+        {% for publishing_status_id in h.publishing_status_options %}
+            <option value="{{ publishing_status_id }}" {% if publishing_status_id == data.common_core.publishing_status %} selected {% endif %} >
+                {{ publishing_status_id }}
+            </option>
+        {% endfor %}
+    </select>
+    <div>Draft datasets will not be included in EDL and PDL</div>
   </div>
 </div>
 
