--- a/default/src/USMetadata/ckanext/usmetadata/templates/package/snippets/package_basic_fields.html
+++ b/default/src/USMetadata/ckanext/usmetadata/templates/package/snippets/package_basic_fields.html
@@ -2,8 +2,7 @@
 {% set always_private = h.always_private %}
 
 {% block package_basic_fields_title %}
-    <h1>Required Common Core Metadata</h1>
-    {{ form.input('title', id='field-title', label=_('Title'), placeholder=_('e.g. A descriptive title'), value=data.title, error=errors.title, classes=['control-full', 'control-large'], attrs={'data-module': 'slug-preview-target', 'title': 'Human-readable name of the asset. Should be in plain English and include sufficient detail to facilitate search and discovery.'}, is_required=true) }}
+    <h1>(Optional) Common Core Metadata</h1>
 {% endblock package_basic_fields_title %}
 
 {% block package_basic_fields_url %}
@@ -11,6 +10,10 @@
     {% set domain = h.url_for(controller='package', action='read', id='', qualified=true) %}
     {% set domain = domain|replace("http://", "")|replace("https://", "") %}
     {% set attrs = {'data-module': 'usmetadata-slug-preview-slug', 'data-module-prefix': domain, 'data-module-placeholder': '<dataset>'} %}
+    {% set dataset_is_draft = data.get('state', 'draft').startswith('draft') or data.get('state', 'none') ==  'none' %}
+    {% if dataset_is_draft %}
+        <input type="hidden" id="dataset_status_id" name="dataset_status" value="draft"/>
+    {% endif %}
 
     {{ form.prepend('name', id='field-name', label=_('URL (Name)'), prepend=prefix, placeholder=_('e.g. my-dataset'), value=data.name, error=errors.name, attrs=attrs, is_required=true) }}
 {% endblock %}
